On focus-blur for static form elements

--- a/src/templates/home/URLDeck/CreateURLForm.html
+++ b/src/templates/home/URLDeck/CreateURLForm.html
@@ -1,15 +1,15 @@
 <div id="createURLWrap" class="input-text-holder flex-column createDiv pad-in-15p gap-20p" style="display: none;">
 	<div class="text-input-container">
 		<div class="text-input-inner-container">
-			<input class="text-input" type="text" id="urlTitleCreate" name="urlTitle" minlength={{CONSTANTS.URLS.MIN_URL_TITLE_LENGTH}} maxlength={{CONSTANTS.URLS.MAX_URL_TITLE_LENGTH}} required>
-			<label class="text-input-label" for="urlTitle">URL Title</label>
+			<input class="text-input" type="text" id="urlTitleCreate" name="urlTitle" minlength={{CONSTANTS.URLS.MIN_URL_TITLE_LENGTH}} maxlength={{CONSTANTS.URLS.MAX_URL_TITLE_LENGTH}} required tabindex="0">
+			<label class="text-input-label" for="urlTitleCreate">URL Title</label>
 		</div>
 		<span class="text-input-error-message" id="urlTitleCreate-error"></span>
 	</div>
 	<div class="text-input-container">
 		<div class="text-input-inner-container">
-			<input class="text-input" type="text" id="urlStringCreate" name="urlString" minlength={{CONSTANTS.URLS.MIN_URL_LENGTH}} maxlength={{CONSTANTS.URLS.MAX_URL_LENGTH}}>
-			<label class="text-input-label" for="urlString">URL</label>
+			<input class="text-input" type="text" id="urlStringCreate" name="urlString" minlength={{CONSTANTS.URLS.MIN_URL_LENGTH}} maxlength={{CONSTANTS.URLS.MAX_URL_LENGTH}} required tabindex="0">
+			<label class="text-input-label" for="urlStringCreate">URL</label>
 		</div>
 		<span class="text-input-error-message" id="urlStringCreate-error"></span>
 	</div>
