--- a/src/templates/_routes_constants.html
+++ b/src/templates/_routes_constants.html
@@ -97,6 +97,7 @@
                 // Tag Constants
                 this.TAGS_MIN_LENGTH = {{CONSTANTS.TAGS.MIN_TAG_LENGTH}}
                 this.TAGS_MAX_LENGTH = {{CONSTANTS.TAGS.MAX_TAG_LENGTH}}
+                this.TAGS_MAX_ON_URLS = {{CONSTANTS.TAGS.MAX_URL_TAGS}}
 
                 Constants.instance = this;
             }
