--- a/src/templates/home/MemberDeck/MemberDeckHeaders.html
+++ b/src/templates/home/MemberDeck/MemberDeckHeaders.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="col-6 col-lg-6 d-flex flex-row icon-holder">
 		<!-- Add user button -->
-		<i id="memberBtnCreate" class="green-clickable ms-1" tabindex="0">
+		<i id="memberBtnCreate" class="green-clickable ms-1" tabindex="0" style="display: none">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
 				width="30" height="30" viewBox="0 0 16 16">
 				<path
@@ -24,5 +24,6 @@
 
 <div class="titleElement pad-in-15p">
 	<!-- Subheader -->
-	<h5 id="MemberDeckSubheader">Add a member</h5>
+	<!--<h5 id="MemberDeckSubheader">Add a member</h5> -->
+	<h5 id="MemberDeckSubheader"></h5>
 </div>
