--- a/src/templates/home/UTubDeck/UTubDeck.html
+++ b/src/templates/home/UTubDeck/UTubDeck.html
@@ -6,7 +6,7 @@
         <div class="flex-column content">
 			<!-- Create UTub Form -->
 			{% include 'home/UTubDeck/CreateUTubForm.html' %}
-            <div class="pad-in-15p" id="listUTubs">
+            <div class="pad-in-15p flex-column" id="listUTubs">
                 <!-- UTubs -->
             </div>
         </div>
