--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -15,6 +15,8 @@
     --blueLinkOnHover: rgba(5, 34, 77, 1.0);
     --darkGrayTextColor: rgba(51, 51, 51, 1.0);
     --selectedUTubColor: rgba(244, 94, 97, 1.0);
+    --selectedUTubColorBackground: rgba(61, 67, 67, 1.0); /* #3D4343 */
+    --selectedUTubColorBackgroundFocus: rgba(82, 88, 88, 1.0); /* #525858 */
     --removeMemberColor: rgba(170, 65, 67, 1.0);
     --removeMemberColorLighter: rgba(170, 65, 67, 0.1);
 
