--- a/src/static/styles/splash.css
+++ b/src/static/styles/splash.css
@@ -21,6 +21,7 @@ img {
 /* Splash */
 
 .bg-img {
+    /* https://images.unsplash.com/photo-1523240795612-9a054b0db644?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80 */
     background: url("splash.jpg");
     background-size: cover;
     min-height: 380px;
