Loading icon at UTub deck when loading all or loading one UTub

--- a/src/templates/home/UTubDeck/UTubDeckHeaders.html
+++ b/src/templates/home/UTubDeck/UTubDeckHeaders.html
@@ -1,7 +1,8 @@
 <!-- Header -->
 <div class="titleElement pad-in-15p justify-space-between">
-    <div>
+    <div class="flex-row gap-10p">
         <h2 id="UTubDeckHeader">UTubs</h2>
+        <div id="UTubSelectDualLoadingRing"></div>
     </div>
     <!-- Icons -->
     <div class="flex-row icon-holder">
