--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -8,7 +8,7 @@
 <!-- 12/17 DP this is visible to the user? Ok? -->
 
 <!-- Left Panel -->
-<div id="leftPanel" class="panel col-md-3">
+<div id="leftPanel" class="panel">
     <!-- UTubs -->
     {% include 'home/UTubDeck/UTubDeck.html' %}
     <!-- End UTubs -->
@@ -25,7 +25,7 @@
 <!-- End Left Panel -->
 
 <!-- Center Panel -->
-<div id="centerPanel" class="panel col-sm-9">
+<div id="centerPanel" class="panel">
     {% include 'home/URLDeck/URLDeck.html' %}
 </div>
 <!-- End Center Panel -->
