--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -6,7 +6,7 @@
     {% include 'head.html' %}
 </head>
 
-<body class="vh-100">
+<body class="flex-column">
     <!-- Includes jinja2 generated routes globally and all backend constants for use by frontend -->
     {% include '_routes_constants.html' %}
 
