--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -5,10 +5,9 @@
 #pageContent {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     max-width: 100%;
-    padding-top: 50px;
     padding-bottom: 5px;
     background-color: var(--pageBackgroundColor);
 }
@@ -18,6 +17,15 @@
     display: flex;
     flex-direction: column;
     padding-inline: 5px;
+}
+
+.panel#leftPanel {
+    width: 25%;
+    min-width: 350px;
+}
+
+.panel#centerPanel {
+    width: 75%;
 }
 
 .deck {
@@ -130,6 +138,7 @@
     overflow-y: auto;
     scrollbar-width: thin;
     border-top: 2px solid var(--contentTopBorder);
+    padding-bottom: 2px;
 }
 
 .flex-start {
@@ -158,6 +167,10 @@
 
 .pad-in-15p {
     padding-inline: 15px;
+}
+
+.gap-15p {
+    gap: 15px;
 }
 
 .gap-20p {
@@ -240,6 +253,10 @@
     visibility: visible !important;
 }
 
+.z9999 {
+    z-index: 9999;
+}
+
 .member,
 .UTubSelector,
 .tagFilter,
@@ -305,7 +322,7 @@
 
 
 .urlTagBtnDelete:focus,
-.tagBadge:hover .urlTagBtnDelete {
+.tagBadgeHoverable:hover .urlTagBtnDelete {
     width: 100%;
     opacity: 100%;
 }
@@ -314,7 +331,7 @@
     transition: padding 0.1s ease-in;
 }
 
-.tagBadge:hover > .tagText {
+.tagBadgeHoverable:hover > .tagText {
     padding-right: 6px;
 }
 
@@ -432,9 +449,11 @@
 }
 
 .urlOptions {
+    display: flex;
+    flex-direction: row;
     flex-wrap: no-wrap;
-    gap: 15px;
 }
+
 
 .goToUrlIcon {
     display: flex;
@@ -464,16 +483,20 @@
 }
 
 .urlTags,
-.urlOptions {
+.urlOptions,
+.urlOptionsInner {
     height: 0;
     transition: padding 0.2s ease-in-out, opacity 0.2s ease-in-out;
     padding: 0;
     opacity: 0;
 }
 
-.urlOptions > button {
+.urlOptionsInner > button {
+    opacity: 0;
+    height: 0;
     font-size: 0;
-    transition: font-size: 0.2s ease-in-out;
+    pointer-events: none;
+    transition: font-size 0.2s ease-in-out, height 0.2s ease-in-out, opacity 0.2s ease-in-out;
 }
 
 .urlTags {
@@ -499,7 +522,8 @@
 }
 
 .urlRow[filterable="true"][urlSelected="true"] .urlTags,
-.urlRow[filterable="true"][urlSelected="true"] .urlOptions {
+.urlRow[filterable="true"][urlSelected="true"] .urlOptions, 
+.urlRow[filterable="true"][urlSelected="true"] .urlOptionsInner {
     height: auto;
     opacity: 1;
 }
@@ -512,8 +536,11 @@
     padding: 15px 0 0 0;
 }
 
-.urlRow[filterable="true"][urlSelected="true"] .urlOptions > button {
+.urlRow[filterable="true"][urlSelected="true"] .urlOptionsInner > button {
+    height: auto;
     font-size: initial;
+    opacity: 1;
+    pointer-events: initial;
 }
 
 .urlRow[filterable="true"][urlSelected="true"] .urlString {
@@ -531,7 +558,7 @@
     display: none;
 }
 
-.urlRow[filterable="true"][urlSelected="true"] .urlTitleAndUpdateIconInnerWrap:hover > .updateURLTitleShowFormIcon {
+.urlRow[filterable="true"][urlSelected="true"] .urlTitleAndUpdateIconInnerWrap:hover > .urlTitleBtnUpdate {
     display: flex;
 }
 
@@ -845,16 +872,62 @@
     }
 }
 
+@media (min-width: 992px) {
+    .panel#centerPanel {
+        max-width: calc(100% - 350px);
+    }
+
+    .navbar-backdrop {
+        display: none;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .panel#centerPanel,
+    .deck#MemberDeck,
+    .deck#TagDeck {
+        display: none;
+    }
+
+    .deck#UTubDeck,
+    .deck#MemberDeck,
+    .deck#TagDeck,
+    .panel#centerPanel,
+    .panel#leftPanel {
+        height: 100%;
+        width: 100%;
+    }
+
+    .navbar-backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1040;
+        width: 100vw;
+        height: 100vh;
+        background-color: #000;
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+    }
+
+    .navbar-backdrop-show {
+        opacity: 0.5;
+    }
+
+    .navbar-backdrop-fade {
+        opacity: 0 !important;
+    }
+
+    .urlRow[filterable="true"][urlSelected="true"] .createUrlTagWrap  {
+        width: 95%;
+    }
+
+    .urlRow[filterable="true"][urlSelected="true"] .createUrlTagWrap > .text-input-container  {
+        width: 100%;
+    }
+}
+
 @media (max-width: 767.98px) {
-    .titleElement {
-        align-items: flex-start;
-        flex-direction: column;
-    }
-
-    .icon-holder {
-        justify-content: flex-start;
-    }
-
     #memberBtnCreate,
     #utubBtnCreate {
         margin-inline: 0px !important;
@@ -873,6 +946,46 @@
     #accessAllURLsBtn {
         width: 100% !important;
     }
+
+}
+
+@media (min-width: 465px) {
+    /*
+    .urlOptions {
+        gap: 15px;
+    }
+    */
+    .urlTagBtnCreate {
+        margin-right: 15px;
+    }
+}
+
+@media (max-width: 464.98px) {
+    .urlOptions {
+        flex-direction: column;
+    }
+
+    .urlOptionsInner {
+        width: 100%;
+    }
+
+    .urlBtnAccess,
+    .urlTagBtnCreate,
+    .urlBtnUpdate,
+    .urlBtnDelete {
+        width: 50%;
+    }
+
+    .urlRow[filterable="true"][urlSelected="true"] .urlOptionsInner:nth-child(2) {
+        padding-top: 15px;
+    }
+
+    /*
+    .urlTagBtnCreate,
+    .urlBtnUpdate {
+        flex: 1 1 auto;
+    }
+    */
 
 }
 
