--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -1,7 +1,8 @@
-<nav id="mainNavbar" class="navbar navbar-expand-md navbar-dark bg-dark py-0 fixed-top">
-    {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
+{% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
+<nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark py-0">
         <a class="navbar-brand navbar-start" href="/home">
     {% else %}
+<nav id="mainNavbar" class="navbar navbar-expand-md navbar-dark bg-dark py-0">
         <a class="navbar-brand navbar-start" href="/">
     {% endif %}
         URLS4IRL
@@ -13,23 +14,12 @@
         aria-controls="NavbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-collapse collapse bg-dark" id="NavbarNavDropdown">
-        <ul id="NavbarDropdowns" class="navbar-nav">
-            {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
-            <li userID="{{current_user.id}}" class="nav-item user">
-                <a id="userLoggedIn" class="nav-link" href="javascript:;"> Logged in as {{current_user.username}}</a>
-            </li>
-            <li class="nav-item">
-                <a id="Logout" class="nav-link" href="{{url_for('users.logout')}}">Logout</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link to-login" href="javascript:;">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link to-register" href="javascript:;">Register</a>
-            </li>
-            {% endif %}
-        </ul>
+        {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
+    <div class="navbar-collapse collapse bg-dark home" id="NavbarNavDropdown">
+            {% include 'components/navHomeItems.html' %}
+        {% else %}
+    <div class="navbar-collapse collapse bg-dark splash" id="NavbarNavDropdown">
+            {% include 'components/navSplashItems.html' %}
+        {% endif %}
     </div>
 </nav>
