--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -60,7 +60,7 @@
 
 html,
 body {
-    height: 100%;
+    height: 100dvh;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -72,6 +72,7 @@ body {
 main {
     flex: 1 1 auto;
     overflow-y: auto;
+    height: calc(100dvh - 50px);
 }
 
 h1 {
