Test accessing URL, URL access warning modal complete. Fix GH actions to only when PR opened or edited

--- a/src/templates/_routes_constants.html
+++ b/src/templates/_routes_constants.html
@@ -92,6 +92,7 @@
                 this.URLS_TITLE_MAX_LENGTH = {{CONSTANTS.URLS.MAX_URL_TITLE_LENGTH}}
                 this.URLS_MIN_LENGTH = {{CONSTANTS.URLS.MIN_URL_LENGTH}}
                 this.URLS_MAX_LENGTH = {{CONSTANTS.URLS.MAX_URL_LENGTH}}
+                this.MAX_NUM_OF_URLS_TO_ACCESS = {{CONSTANTS.URLS.MAX_NUM_OF_URLS_TO_ACCESS}}
 
                 // Tag Constants
                 this.TAGS_MIN_LENGTH = {{CONSTANTS.TAGS.MIN_TAG_LENGTH}}
