--- a/src/templates/home/UTubDeck/UTubDeckHeaders.html
+++ b/src/templates/home/UTubDeck/UTubDeckHeaders.html
@@ -5,9 +5,9 @@
         <div id="UTubSelectDualLoadingRing"></div>
     </div>
     <!-- Icons -->
-    <div class="flex-row icon-holder">
+    <div class="flex-row icon-holder" style="gap:2px">
         <!-- Create UTub button -->
-        <i id="utubBtnCreate" class="mx-1" tabindex="0">
+        <i id="utubBtnCreate" tabindex="0">
             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill green-clickable" width="30" height="30"
                 viewBox="0 0 16 16">
                 <path
