Added frontend capability. Tests needed

--- a/src/templates/password_reset/forgot_password.html
+++ b/src/templates/password_reset/forgot_password.html
@@ -31,8 +31,11 @@
         <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
     </div>
     <div class="modal-footer">
-        {{ forgot_password_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block col-12")}}
+        {{ forgot_password_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block col-7 mr-4")}}
+        <a id="ToLoginFromForgotPassword" class="btn btn-secondary col-4 login-register-form-group center-block"
+            href="javascript:;">Back to Login</a>
     </div>
 </form>
 
 <script src="{{ url_for('static', filename='scripts/splash/forgotPassword.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/splash/register.js') }}"></script>
