I think this works? All tests pass when run individually. Sometimes fail in bulk but hoping running remote in parallel will work

--- a/src/templates/register_user.html
+++ b/src/templates/register_user.html
@@ -93,4 +93,5 @@
     </div>
 </div>
 
+<script src="{{ url_for('static', filename='scripts/splash.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/splash/register.js') }}"></script>
