--- a/src/templates/password_reset/forgot_password.html
+++ b/src/templates/password_reset/forgot_password.html
@@ -37,5 +37,5 @@
     </div>
 </form>
 
+<script src="{{ url_for('static', filename='scripts/splash.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/splash/forgotPassword.js') }}"></script>
-<script src="{{ url_for('static', filename='scripts/splash/register.js') }}"></script>
