--- a/src/templates/home/URLDeck/URLDeck.html
+++ b/src/templates/home/URLDeck/URLDeck.html
@@ -8,7 +8,13 @@
 	<!-- URLs -->
 	<div class="flex-column content">
 		<!-- URLs above selected URL will be displayed here -->
-		<p class="pad-in-15p" id="NoURLsSubheader" style="display: none; padding-top: 1rem;">No URLs here - add one!</p>
+		<p class="pad-in-15p" id="NoURLsSubheader" style="display: none; padding-top: 1rem;"></p>
+
+		<!-- Create URL button -->
+		<div class="flex-column align-center pad-in-15p" style="padding-top: 10px; width: 100%;">
+			<button id="urlBtnDeckCreate" class="btn btn-success" style="display: none; width: 50%;">No URLs here yet - Add one!</button>
+		</div>
+
 		<div id="listURLs">
 			<h5 class="flex-row justify-center" id="URLDeckErrorIndicator" tabindex="-1">Check me out here</h5>
 			<!-- Create URL Form -->
