Handle functionality for showing/hiding UTub Desc Create when it is empty

--- a/src/templates/home/URLDeck/URLDeck.html
+++ b/src/templates/home/URLDeck/URLDeck.html
@@ -1,9 +1,11 @@
 <div id="URLDeck" class="deck h-100 flex-column" style="align-items: stretch;">
-	<!-- Header -->
-	{% include 'home/URLDeck/URLDeckHeader.html' %}
+	<div class="flex-column" id="URLDeckHeaderWrap">
+		<!-- Header -->
+		{% include 'home/URLDeck/URLDeckHeader.html' %}
 
-	<!-- Subheader -->
-	{% include 'home/URLDeck/URLDeckSubheader.html' %}
+		<!-- Subheader -->
+		{% include 'home/URLDeck/URLDeckSubheader.html' %}
+	</div>
 
 	<!-- URLs -->
 	<div class="flex-column content">
