--- a/src/templates/home/TagsDeck/TagsDeck.html
+++ b/src/templates/home/TagsDeck/TagsDeck.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="col-6 col-lg-6 d-flex flex-row icon-holder">
 			<!-- Add tag button -->
-			<i id="utubTagBtnCreate" class="green-clickable ms-1" tabindex="0" style="display: none">
+			<i id="utubTagBtnCreate" style="display: none !important;" class="green-clickable ms-1" tabindex="0" >
 				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
 					width="30" height="30" viewBox="0 0 16 16">
 					<path
