--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -76,13 +76,13 @@
     background: var(--darkSplashGreen);
 }
 
-.trash-fill {
+.trash-fill, .funnel-x {
     background: var(--removeIconColor);
     border-radius: 4px;
 }
 
 .cancelButton-wide:hover,
-.trash-fill:hover {
+.trash-fill:hover, .funnel-x:hover {
     cursor: pointer;
     background: var(--removeIconColorHover);
 }
