Revert "Fixed padding issue that emerged with the addition of the creatURL bu…"
This reverts commit 21b5442906ca0229da4180507a9ef0d4457499f3.

--- a/src/templates/home/URLDeck/URLDeck.html
+++ b/src/templates/home/URLDeck/URLDeck.html
@@ -13,8 +13,8 @@
 		<p class="pad-in-15p" id="NoURLsSubheader" style="display: none; padding-top: 1rem;"></p>
 
 		<!-- Create URL button -->
-		<div id="urlBtnDeckCreateWrap" class="flex-column align-center pad-in-15p" style="display: none; padding-top: 10px; width: 100%;">
-			<button id="urlBtnDeckCreate" class="btn btn-success" style="width: 50%;">No URLs here yet - Add one!</button>
+		<div class="flex-column align-center pad-in-15p" style="padding-top: 10px; width: 100%;">
+			<button id="urlBtnDeckCreate" class="btn btn-success" style="display: none; width: 50%;">No URLs here yet - Add one!</button>
 		</div>
 
 		<div id="listURLs">
