Tag filter button functionality complete and PASSED tests

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -16,7 +16,7 @@
 <!-- JS -->
 
 <!-- jQuery - v3.7.1 -->
-<script src="/static/scripts/jquery-3.7.1.min.js"></script>
+<script src="/static/scripts/jquery-3.6.0.js"></script>
 
 <!-- Bootstrap bundle with popper - v5.2.3 -->
 <script src="/static/scripts/bootstrap.bundle.min.js"></script>
