--- a/src/templates/home/TagsDeck/TagsDeck.html
+++ b/src/templates/home/TagsDeck/TagsDeck.html
@@ -14,7 +14,7 @@
 			</i>
 
 			<!-- Unselect all applied tag filters button -->
-			<i id="unselectAllTagFilters" class="ms-1" style="display: none" tabindex="0">
+			<i id="unselectAllTagFilters" class="ms-1" style="" tabindex="0">
 				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 -1 16 17" fill="black" class="bi funnel-x">
 					<!-- Funnel outline (shifted downward for more padding) -->
 					<path fill="none" stroke="black" stroke-width="1.5" d="M1.5 2A.5.5 0 0 1 2 1.5h12a.5.5 0 0 1 .5.5v2.5a.5.5 0 0 1-.146.354L10 9.793V14a.5.5 0 0 1-.757.429L6 13V9.793L1.646 5.354A.5.5 0 0 1 1.5 5V2z"/>
