--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -397,7 +397,7 @@
     gap: 2rem;
 }
 
-#unselectAll.disabled,
+#unselectAll.disabled, #unselectAllTagFilters.disabled
 .unselected.disabled {
     cursor: not-allowed;
     color: gray;
