Ensure update UTub desc btn hidden when no UTub selected, and hidden on home page load

--- a/src/templates/home/URLDeck/URLDeckSubheader.html
+++ b/src/templates/home/URLDeck/URLDeckSubheader.html
@@ -2,7 +2,7 @@
 	<div class="flex-row align-center" id="UTubDescriptionSubheaderWrap">
 		<h5 id="URLDeckSubheader">Select a UTub</h5>
 		<!-- Update UTub description button -->
-		<i id="updateUTubDescriptionBtn" class="mx-1" style="display: none;">
+		<i id="updateUTubDescriptionBtn" class="mx-1 hiddenBtn" style="display: none;">
 			<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
 				class="bi bi-pencil-square updateIcon" viewBox="0 0 16 16">
 				<path
