Frontend/tag/remove filters button in header (#368)
* Added new button. Added click and show/hide behaviors to reflect the existing 'Unselect All' tag filter selector. Need to create tests

* Tests updated to include new button. I want to revise the test to better evaluate unfiltered URLs (rather than merely compare visible count). And I want to fix unselectAll visibility after Tag Filter Creation in Deck

* Tag filter button functionality complete and PASSED tests

--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -76,13 +76,13 @@
     background: var(--darkSplashGreen);
 }
 
-.trash-fill {
+.trash-fill, .funnel-x {
     background: var(--removeIconColor);
     border-radius: 4px;
 }
 
 .cancelButton-wide:hover,
-.trash-fill:hover {
+.trash-fill:hover, .funnel-x:hover {
     cursor: pointer;
     background: var(--removeIconColorHover);
 }
@@ -397,7 +397,7 @@
     gap: 2rem;
 }
 
-#unselectAll.disabled,
+#unselectAll.disabled, #unselectAllTagFilters.disabled
 .unselected.disabled {
     cursor: not-allowed;
     color: gray;
