--- a/src/templates/home/TagsDeck/TagsDeck.html
+++ b/src/templates/home/TagsDeck/TagsDeck.html
@@ -1,16 +1,27 @@
 <div id="TagDeck" class="deck flex-column">
-	<div class="titleElement sidePanelTitle pad-in-15p">
-		<div class="col-6 col-lg-6">
+	<div class="titleElement pad-in-15p justify-space-between">
+		<div class="flex-row gap-10p">
 			<h2 id="TagDeckHeader">Tags</h2>
 		</div>
-		<div class="col-6 col-lg-6 d-flex flex-row icon-holder">
+		<div class="flex-row icon-holder" style="gap:2px">
 			<!-- Add tag button -->
-			<i id="utubTagBtnCreate" style="display: none !important;" class="green-clickable ms-1" tabindex="0" >
-				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
-					width="30" height="30" viewBox="0 0 16 16">
+			<i id="utubTagBtnCreate" style="display: none !important;" class="green-clickable ms-1" tabindex="0">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill" width="30"
+					height="30" viewBox="0 0 16 16">
 					<path
 						d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
 				</svg>
+			</i>
+
+			<!-- Unselect all applied tag filters button -->
+			<i id="unselectAllTagFilters" class="ms-1" style="" tabindex="0">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 -1 16 17" fill="black" class="bi funnel-x">
+					<!-- Funnel outline (shifted downward for more padding) -->
+					<path fill="none" stroke="black" stroke-width="1.5" d="M1.5 2A.5.5 0 0 1 2 1.5h12a.5.5 0 0 1 .5.5v2.5a.5.5 0 0 1-.146.354L10 9.793V14a.5.5 0 0 1-.757.429L6 13V9.793L1.646 5.354A.5.5 0 0 1 1.5 5V2z"/>
+					
+					<!-- X without an outline (solid fill) -->
+					<path fill="black" d="M12.146 12.854a.5.5 0 0 1 0-.708L13.293 11l-1.147-1.146a.5.5 0 0 1 .708-.708L14 10.293l1.146-1.147a.5.5 0 0 1 .708.708L14.707 11l1.147 1.146a.5.5 0 0 1-.708.708L14 11.707l-1.146 1.147a.5.5 0 0 1-.708 0z"/>
+				  </svg>								
 			</i>
 		</div>
 	</div>
